230210 파일업로드까지

--- a/Model2/src/main/webapp/index.html
+++ b/Model2/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<script type="text/javascript">
-			location.href="MemberInsertForm.me";
-			//   location.href = "MemberLoginForm.me";
+			// location.href="MemberInsertForm.me";
+			   location.href = "MemberLoginForm.me";
 	</script>
 </body>
 </html>
